// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WorkoutStatusBar > matches snapshot (full state) 1`] = `
.c1.c1 {
  color: #374151;
}

.c0 {
  display: flex;
  flex-wrap: wrap;
  gap: 12px;
  align-items: center;
  font-size: 14px;
}

.c2 {
  color: #b91c1c;
}

<div
  class="c0"
>
  <span
    class="ant-tag ant-tag-filled ant-tag-success css-dev-only-do-not-override-xogyor css-var-_r_0_"
  >
    Модель: 
    ok
  </span>
  <span
    class="ant-tag ant-tag-filled ant-tag-success css-dev-only-do-not-override-xogyor css-var-_r_0_"
  >
    Camera: 
    ready
  </span>
  <span
    class="ant-tag ant-tag-filled ant-tag-blue css-dev-only-do-not-override-xogyor css-var-_r_0_"
  >
    Voice
  </span>
  <span
    class="ant-tag ant-tag-filled c1 css-dev-only-do-not-override-xogyor css-var-_r_0_"
  >
    Упражнение приостановлено
  </span>
  <span
    class="c2"
  >
    Ошибка камеры: 
    boom
  </span>
</div>
`;

exports[`WorkoutStatusBar > matches snapshot (minimal) 1`] = `
.c1.c1 {
  color: #6b7280;
}

.c0 {
  display: flex;
  flex-wrap: wrap;
  gap: 12px;
  align-items: center;
  font-size: 14px;
}

<div
  class="c0"
>
  <span
    class="ant-tag ant-tag-filled ant-tag-blue css-dev-only-do-not-override-xogyor css-var-_r_1_"
  >
    Модель: 
    wait
  </span>
  <span
    class="ant-tag ant-tag-filled c1 css-dev-only-do-not-override-xogyor css-var-_r_1_"
  >
    Camera: 
    off
  </span>
  <span
    class="ant-tag ant-tag-filled c1 css-dev-only-do-not-override-xogyor css-var-_r_1_"
  >
    V
  </span>
</div>
`;
